snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.pom.sha512
c9dccc9bb1886195577e9740d6fe65cf64d3e2d158d782ef969c5805133b238aceccd914ae2ea0ccddbeaeb85f7b37d283573e9c372796a171a6ab709e187d27